Use docker volume b/c of windows

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ x-base_service: &base_service
     ports:
       - "${WEBUI_PORT:-7860}:7860"
     volumes:
-      - &v1 ./data:/data
+      - &v1 data:/data
       - &v2 ./output:/output
     stop_signal: SIGKILL
     tty: true
@@ -53,3 +53,6 @@ services:
     deploy: {}
     environment:
       - CLI_ARGS=--cpu
+
+volumes:
+  data:
